# pier

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vitest.config.ts
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: skill.md
examples/: tools.json
plugin/.claude-plugin/: plugin.json
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  about.toml  build.rs  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs  state.rs
src-tauri/src/application/: arg_template.rs  audit.rs  autostart.rs  env_resolver.rs  history.rs  history_admin.rs  load_config.rs  mod.rs  path_resolver.rs  run_tool.rs  settings.rs  tool_registry.rs  update.rs  watch_config.rs
src-tauri/src/domain/: library.rs  mod.rs  run.rs  settings.rs  tool.rs  update.rs
src-tauri/src/infrastructure/: atomic_write.rs  fs_watcher.rs  library_http.rs  mod.rs  run_store.rs  shell_env.rs  subprocess.rs
src-tauri/tests/fixtures/: catalog_sample.json  catalog_sample.json.minisig  library_pubkey.txt
src/application/: argTemplate.ts  loadConfig.ts  ports.ts  runBlocker.ts  summarizeAdvanced.ts  useLibrary.ts  useSettings.ts  useToolRun.ts  useUpdater.ts
src/domain/: favorites.ts  library.ts  tool.ts  (+7 more)
(+179 files in other folders)
