[package]
name = "pier"
version = "0.1.2"
description = "Tauri-based macOS menu-bar launcher for personal CLI tools"
authors = ["Ryusei Taniguchi <taniguchi.ryusei@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/KenTaniguchi-R/pier"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pier_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
notify = "6"
strip-ansi-escapes = "0.2.1"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-service-management = "0.3"

[dev-dependencies]
tempfile = "3"

